# CppShooter

./: .clang-format  CMakeLists.txt  main.cpp  managers.cpp  managers.h
